VFS-3136 Sidebar hovered item background fix, fix for alignment of elements in main menu.

--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -18,7 +18,7 @@ $control-box-shadow: inset 1px 1px 2px #eee;
 // TODO maybe use https://github.com/davidpett/ember-cli-sass-variables
 
 $mobile-top-height: 70px;
-$main-menu-width: 212px;
+$main-menu-width: 200px;
 
 $color-overlay: $content-backdrop-bg;
 
