--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -1,12 +1,20 @@
 .onedata-logo {
-  width: 120px;
-  height: 25px;
+  position: relative;
+  width: 150px;
+  height: 35px;
   background-image: url($root-url + 'assets/images/logo.svg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
   margin-left: auto;
   margin-right: auto;
+  &::after {
+    content: "Onepanel";
+    position: absolute;
+    bottom: -1.8em;
+    color: white;
+    letter-spacing: 0.7px;
+  }
 }
 
 .vertical-align-middle {
