--- a/src/app/styles/one-sidebar.scss
+++ b/src/app/styles/one-sidebar.scss
@@ -2,8 +2,8 @@
   .row-heading {
     .col-title {
       padding: $one-sidebar-item-padding;
-      padding-top: 40px;
-      padding-bottom: 40px;
+      padding-top: 30px;
+      padding-bottom: 30px;
       font-family: 'Open Sans Semibold';
       line-height: initial;
     }
